@@ -74,6 +74,9 @@ Fixes:
    report by Ashen-Shugar. [MG]
  * dbcks didn't reset corrupt exit's source room. Patch by Padriac.
  * lmath(and,) returned 1 instead of 0. Reported by Padriac. [SW].
+ * Mixing old-style ansi colors and xterm colors was broken. [MG]
+ * Players who couldn't see xterm colors would sometimes get a highlighted
+   foreground color by mistake. [MG]
 
 Version 1.8.5 patchlevel 3                                 Aug 23, 2012
 
